@@ -39,6 +39,7 @@ Accepted Patches
 Chris Banal
 Daniel Beardsmore
 Joshua Cowan
+John Dennis
 Basil Gor
 Mathias Hasselmann
 Björn Nilsson
