@@ -5,6 +5,8 @@ Version 2.6.1: ??/??/??
 	  settings provided by irc-more on IRC accounts.
 	* Fix Message Splitter so that it builds on Windows.
 	* Fix Group Message so that its request dialog doesn't get too long.
+	* Make IRC Helper suppress an additional message related to hostmasks.
+	  (John Dennis)
 
 Version 2.6.0: 08/30/09
 	* Fix grouping of radio buttons in switchspell menu for enchant-enabled
